--- a/html/work.html
+++ b/html/work.html
@@ -192,7 +192,7 @@
                                         <i class="fa-brands fa-discord" style="color: whitesmoke;"></i>
                                     </cardTxtTitle>
                                     <cardTxt>
-                                        A discord bot with unique feature! History, music and more!
+                                        A discord bot with unique feature! History, music and more made in python.
                                     </cardTxt>
                                     <button class="buttonCard">My Portfolio ></button>
                                 </div>
@@ -359,7 +359,7 @@
 
                 <!-- Footer row Start -->
                 <div class="pt-2 text-center">
-                    <button class="buttonIntro"> About me ></button>
+                    <button class="buttonIntro" onclick="window.location.href='/html/work.html'">About me ></button>
                 </div>
 
 
