--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,7 @@
                     <ul>
                         <li class="listHeader"><a href="/html/index.html">Home</a></li>
                         <li class="listHeader"><a href="/html/work.html">Work</a></li>
-                        <li class="listHeader"><a href="">About</a></li>
+                        <li class="listHeader"><a href="/html/about.html">About</a></li>
                         <li class="listHeader"><a href="">Photo</a></li>
                         <li class="listHeader"><a href="https://github.com/justachips">
                             <i class="fa-brands fa-square-github buttonGit" style="color: chocolate;"></i>
@@ -80,7 +80,7 @@
                             <div class="dropdown-content">
                                 <a href="/html/index.html">Home</a>
                                 <a href="/html/work.html">Work</a>
-                                <a href="#">About</a>
+                                <a href="/html/about.html">About</a>
                                 <a href="#">Photo</a>
                                 <a href="https://github.com/justachips">GitHub</a>
                             </div>
@@ -189,7 +189,7 @@
         
                         <div class="col-12 col-md-4">
                             <myTxtWork>Work</myTxtWork>
-                            <p>&emsp; Hello, and welcome, my name is Thibaut and I am a French student from Paris. I have a passion for building digital products and discovering new tech. I aim to become a full stack developer to make my own projects from the front end to the back end. When I am not coding, I love hiking in the mountains of France or exploring all sorts of art. Currently, I am building my 
+                            <p>&emsp; Hello and welcome, my name is Thibaut and i am a French student from Paris. I have a passion for building digital products and discovering new tech. I aim to become a full stack developer to make my own projects from the front end to the back end. When I am not coding, I love hiking in the mountains of France or exploring all sorts of art. Currently, I am building my 
                                 <c><a href="https://github.com/justachips/PortfolioFgi" class="hyperlink">website</a></c>, have a look !</p>
                             <p></p>
                             <button class="buttonIntro" onclick="window.location.href='/html/work.html'">My Portfolio ></button>
@@ -272,7 +272,7 @@
      
                      <!-- Footer row Start --> 
                      <div class="pt-2 text-center">
-                        <button class="buttonIntro" onclick="window.location.href='/html/work.html'">About me ></button>
+                        <button class="buttonIntro" onclick="window.location.href='/html/about.html'">Contact me ></button>
                     </div>
 
 
