--- a/html/work.html
+++ b/html/work.html
@@ -63,7 +63,7 @@
                 <ul>
                     <li class="listHeader"><a href="/html/index.html">Home</a></li>
                     <li class="listHeader"><a href="/html/work.html">Work</a></li>
-                    <li class="listHeader"><a href="">About</a></li>
+                    <li class="listHeader"><a href="/html/about.html">About</a></li>
                     <li class="listHeader"><a href="">Photo</a></li>
                     <li class="listHeader"><a href="https://github.com/justachips">
                             <i class="fa-brands fa-square-github buttonGit" style="color: chocolate;"></i>
@@ -85,7 +85,7 @@
                             <div class="dropdown-content">
                                 <a href="/html/index.html">Home</a>
                                 <a href="/html/work.html">Work</a>
-                                <a href="#">About</a>
+                                <a href="/html/about.html">About</a>
                                 <a href="#">Photo</a>
                                 <a href="https://github.com/justachips">GitHub</a>
                             </div>
@@ -359,7 +359,7 @@
 
                 <!-- Footer row Start -->
                 <div class="pt-4 text-center">
-                    <button class="buttonIntro" onclick="window.location.href='/html/work.html'">About me ></button>
+                    <button class="buttonIntro" onclick="window.location.href='/html/about.html'">Contact me ></button>
                 </div>
 
 
