--- a/html/work.html
+++ b/html/work.html
@@ -61,7 +61,7 @@
             <div class="col-4 align-items-center text-center pt-2 navContainer">
 
                 <ul>
-                    <li class="listHeader"><a href="/html/index.html">Home</a></li>
+                    <li class="listHeader"><a href="/index.html">Home</a></li>
                     <li class="listHeader"><a href="/html/work.html">Work</a></li>
                     <li class="listHeader"><a href="/html/about.html">About</a></li>
                     <li class="listHeader"><a href="">Photo</a></li>
@@ -83,7 +83,7 @@
                             <button class="buttonNav"><i class="fa-solid fa-bars"
                                     style="color: antiquewhite;"></i></button>
                             <div class="dropdown-content">
-                                <a href="/html/index.html">Home</a>
+                                <a href="/index.html">Home</a>
                                 <a href="/html/work.html">Work</a>
                                 <a href="/html/about.html">About</a>
                                 <a href="#">Photo</a>
@@ -377,7 +377,7 @@
 
 
 
-                            © 2024 Figueira Thibaut. all right reserved.
+                            © 2024 Figueira Thibaut. All right reserved.
                         </div>
                     </div>
 
