--- a/html/about.html
+++ b/html/about.html
@@ -61,7 +61,7 @@
             <div class="col-4 align-items-center text-center pt-2 navContainer">
 
                 <ul>
-                    <li class="listHeader"><a href="/html/index.html">Home</a></li>
+                    <li class="listHeader"><a href="/index.html">Home</a></li>
                     <li class="listHeader"><a href="/html/work.html">Work</a></li>
                     <li class="listHeader"><a href="">About</a></li>
                     <li class="listHeader"><a href="">Photo</a></li>
@@ -83,7 +83,7 @@
                             <button class="buttonNav"><i class="fa-solid fa-bars"
                                     style="color: antiquewhite;"></i></button>
                             <div class="dropdown-content">
-                                <a href="/html/index.html">Home</a>
+                                <a href="/index.html">Home</a>
                                 <a href="/html/work.html">Work</a>
                                 <a href="#">About</a>
                                 <a href="#">Photo</a>
@@ -132,7 +132,7 @@
 
             <div class="col-12 col-md-4 p-3 ">
                 <div class="msgIntro">
-                    <introTxtCadre> Here are my info !</introTxtCadre>
+                    <introTxtCadre> Lets keep in touch !</introTxtCadre>
                 </div>
 
 
@@ -146,7 +146,34 @@
 
 
 
+        
+                <!-- Footer row Start -->
+                
 
+
+                <div class="row text-center pt-2 ">
+
+                    <div class="col-3 ">
+
+                    </div>
+
+
+                    <div class="col-12 col-md-6 ">
+                        <div class="footer">
+
+
+
+
+
+                            © 2024 Figueira Thibaut. All right reserved.
+                        </div>
+                    </div>
+
+                    <div class="col-3 ">
+
+                    </div>
+
+                </div> <!-- Footer row END -->
 
             </div> <!-- CONTAINER END HERE -->
 
