card n about finishedé

--- a/html/work.html
+++ b/html/work.html
@@ -130,7 +130,7 @@
             </div>
 
 
-            <div class="col-12 col-md-4 p-3 ">
+            <div class="col-12 col-md-4 pt-3 ">
                 <div class="msgIntro">
                     <introTxtCadre>Lets see some of my work !</introTxtCadre>
                 </div>
