--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
 
 
-            <div class="col-12 col-md-4 p-3 ">
+            <div class="col-12 col-md-4 pt-3 ">
                 <div class="msgIntro">
                     <introTxtCadre>Hello World, i am a computer scientists from France !</introTxtCadre>
                 </div>
