--- a/html/about.html
+++ b/html/about.html
@@ -184,7 +184,7 @@
                             </div>  
 
                             <div class="col-12 ">
-                                <input type="submit" class="buttonIntro"  value="Send it ">
+                                <input type="submit" class="buttonIntro"  value=" Send it > ">
                             </div>
 
                         </div>
@@ -227,7 +227,7 @@
                         <div>
                             <button class="buttonCv" onclick="downloadPdf()"><i class="fa-solid fa-file-pdf" style="color: antiquewhite;"></i></button>
                         </div>
-                        <txtCv>Curriculum vitæ</txtCv>
+                        <txtCv>curriculum vitæ</txtCv>
 
                     </div>
                     
