--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <li class="listHeader"><a href="/index.html">Home</a></li>
                     <li class="listHeader"><a href="/html/work.html">Work</a></li>
                     <li class="listHeader"><a href="/html/about.html">About</a></li>
-                    <li class="listHeader"><a href="">Photo</a></li>
+                    <li class="listHeader"><a href="/html/photo.html">Photo</a></li>
                     <li class="listHeader"><a href="https://github.com/justachips">
                             <i class="fa-brands fa-square-github buttonGit" style="color: chocolate;"></i>
                             GitHub
@@ -84,7 +84,7 @@
                                 <a href="/index.html">Home</a>
                                 <a href="/html/work.html">Work</a>
                                 <a href="/html/about.html">About</a>
-                                <a href="#">Photo</a>
+                                <a href="/html/photo.html">Photo</a>
                                 <a href="https://github.com/justachips">GitHub</a>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                                 <myTxtMaj>Figueira Thibaut</myTxtMaj>
                             </div>
                             <div class="col">
-                                <myTxt>Student, mountain lover, 5B+, artist, runner.</myTxt>
+                                <myTxt>Student, mountain lover, artist, runner.</myTxt>
                             </div>
                         </div>
 
@@ -190,8 +190,8 @@
 
             </div>
 
-            <div class="col-12 col-md-4 pt-3">
-                <div class="pt-2 pb-2">
+            <div class="col-12 col-md-4 ">
+                <div class=" pb-2">
                     <myTxtWork>Work</myTxtWork>
                 </div>
                 
@@ -287,7 +287,7 @@
                     <myTxtWork> I love </myTxtWork>
                 </div>
                 
-                <p>&emsp; Hiking, Nature, Art,  <c><a href="/html/work.html" class="hyperlink">Photography</a></c>, Running, Climbing, Chill Music, Movie, SF & Fantasy Books.  </p>
+                <p>&emsp; Hiking, Nature, Art,  <c><a href="/html/photo.html" class="hyperlink">Photography</a></c>, Running, Climbing, Chill Music, Movie, SF & Fantasy Books.  </p>
 
 
             </div>
